authorization, check variant

--- a/src/components/Variant/styles.scss
+++ b/src/components/Variant/styles.scss
@@ -4,3 +4,13 @@
         padding-bottom: 15px;
     }
 }
+
+.variant {
+    padding-top: 30px;
+}
+
+.submitButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
