--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@ body {
     display: block;
     align-items: center;
     justify-content: center;
+    font-family: 'Sunflower', sans-serif;
 }
 
 .contentWrapper {
