--- a/src/components/Dashboard/styles.scss
+++ b/src/components/Dashboard/styles.scss
@@ -6,3 +6,13 @@
     padding-left: 20px;
     padding-right: 20px;
 }
+
+
+.timer {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 200px;
+    background-color: white;
+    z-index: 9999;
+}
