--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,10 @@ body {
     max-width: 600px;
     padding: 0 0.5em;
 }
+
+
+.contentWrapperAdmin {
+    margin: 0 auto;
+    max-width: 1000px;
+    padding: 0 0.5em;
+}
